--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,7 @@
         <li><a href="ex7/">Компонент USER - Мои воображаемые друзья</a></li>
         <li><a href="ex8/">Выключатели</a></li>
         <li><a href="ex10/">Мои воображаемы друзья - Like</a></li>
-        <li><a href="ex11/">SPA-Router</a></li>
+        <li><a href="ex11/public/">SPA-Router</a></li>
         <li><a href="ex9/">EX_9</a></li>
     </ol>
 </body>
